Date picker fix for Joomla 5 dark mode Make link in iCal export an absolute URL

--- a/component/admin/assets/css/responsive.css
+++ b/component/admin/assets/css/responsive.css
@@ -47,9 +47,8 @@
     height: 28px;
   }
   #gslc.gsl-scope .gsl-content.gsl-backend .gsl-grid .gsl-select {
-    padding: 0 10px 0 0;
+    padding: 0 10px 0 5px;
     line-height: 28px;
-    height: 28px;
     font-size: 0.875rem;
   }
   #gslc.gsl-scope .gsl-content.gsl-backend .gsl-grid .gsl-select:not([multiple]):not([size]) {
