--- a/component/admin/assets/less/j4.less
+++ b/component/admin/assets/less/j4.less
@@ -313,6 +313,9 @@ body.com_categories.view-categories {
     .table > :not(caption) > * > * {
       background-color: #fff;
     }
+    div.calendar-container table > :not(caption) > * > * {
+      background-color: unset;
+    }
     joomla-field-fancy-select {
       background-color: #fff;
       background-image: none;
